# EasyUniVPN

./: .gitignore  CHANGELOG.md  README.md  THIRD-PARTY-NOTICES.md  build.ps1
.github/workflows/: release.yml
cli/: build_cli.ps1
cli/src/common/: __init__.py  app_config.py  constants.py  elevation.py  launch.py  logger.py  openconnect_config.py  paths.py  startup.py  totp.py  vpn.py
cli/src/easyunivpn/: __init__.py  __main__.py  cli.py  launcher.py
cli/src/installer/: __init__.py  runtime.py
cli/src/setup/: __init__.py  batch.py  probe.py  wizard.py
cli/src/tray/: __init__.py  app.py
docs/: DEVELOPMENT.md
installer/: easyunivpn.iss  requirements.lock.txt
installer/assets/: headless.py
launcher/: Cargo.toml  build.rs
launcher/src/: main.rs
tests/: .env.example  01-ProbeAuth.Tests.ps1  02-Setup.Tests.ps1  03-Status.Tests.ps1  04-Credentials.Tests.ps1  05-Autostart.Tests.ps1  06-Reset.Tests.ps1  Run-Tests.ps1
tests/helpers/: Common.ps1
tray/: AppConfig.cs  Compat.cs  EasyUniVPN.csproj  HotkeyWindow.cs  IpMonitor.cs  LucideIcons.cs  NativeMethods.cs  Program.cs  ServerClock.cs  Totp.cs  TrayApp.cs  VpnController.cs
